--- a/index.html
+++ b/index.html
@@ -7,27 +7,18 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-
 <header>  
     <h1>Autos en ventas</h1>
-<button class = "parametros" type="button">Presiona aqui</button>
-</nav>
-    <ul>
-        <li>aaaa</li>
-        <li></li>
-        <li></li>
-    </ul>
-</nav>
-<div>
-    <main>
-        <article></article>
-        <article></article>
-    </main>
-    <aside>
-        <p></p>
-    </aside>
-</div>
-
 </header> 
+<nav> 
+    <ul>
+       <li>Productos</li>
+       <hr>
+       <li>Servicios</li>
+       <hr>
+       <li>Nosotros</li>
+       <hr>
+     </ul>
+</nav> 
 </body>
 </html>
